[HaRepacker] Move png animation builder to more option button on the left corner

--- a/HaRepacker/GUI/Panels/MainPanel.xaml
+++ b/HaRepacker/GUI/Panels/MainPanel.xaml
@@ -373,10 +373,11 @@
                     </Button.RenderTransform>
                     <Button.ContextMenu>
                         <ContextMenu Name="cm" StaysOpen="true">
-                            <MenuItem Header="Animate (F5)" x:Name="menuItem_Animate" Click="menuItem_Animate_Click"/>
-                            <MenuItem Header="Change Image" x:Name="menuItem_changeImage" Click="menuItem_changeImage_Click"/>
-                            <MenuItem Header="Change Sound" x:Name="menuItem_changeSound" Click="menuItem_changeSound_Click"/>
-                            <MenuItem Header="Save Sound" x:Name="menuItem_saveSound" Click="menuItem_saveSound_Click"/>
+                            <MenuItem Header="Animate (F5)" x:Name="menuItem_Animate" Click="MenuItem_Animate_Click"/>
+                            <MenuItem Header="Save image animation" x:Name="menuItem_saveImageAnimation" Click="MenuItem_saveImageAnimation_Click"/>
+                            <MenuItem Header="Change Image" x:Name="menuItem_changeImage" Click="MenuItem_changeImage_Click"/>
+                            <MenuItem Header="Change Sound" x:Name="menuItem_changeSound" Click="MenuItem_changeSound_Click"/>
+                            <MenuItem Header="Save Sound" x:Name="menuItem_saveSound" Click="MenuItem_saveSound_Click"/>
                             <MenuItem Header="Save Image" x:Name="menuItem_saveImage" Click="menuItem_saveImage_Click"/>
                             <!--  <MenuItem Header="Save Sound">
                                         <MenuItem Header="ReadMe.txt"/>
