--- a/HaRepacker/GUI/Panels/MainPanel.xaml
+++ b/HaRepacker/GUI/Panels/MainPanel.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:HaRepacker"
+             
              xmlns:sharedLib="clr-namespace:HaSharedLibrary.GUI;assembly=HaSharedLibrary"
               xmlns:localgui ="clr-namespace:HaRepacker.GUI"
              xmlns:localSubPanels ="clr-namespace:HaRepacker.GUI.Panels.SubPanels"
@@ -345,6 +346,8 @@
 
                     <sharedLib:SoundPlayer x:Name="mp3Player" Visibility="Collapsed"/>
 
+                    <!-- Lua script editor-->
+                    <localSubPanels:AvalonTextEditor x:Name="textEditor" Visibility="Collapsed"/>
 
                     <!-- Image render -->
                     <Grid x:Name="Grid_ImageRender" Margin="10">
@@ -390,7 +393,7 @@
                         </ContextMenu>
                     </Button.ContextMenu>
                 </Button>
-               
+
             </Grid>
 
 
