[HaCreator] Dump unsupported 'info' properties back when saving
this should fix some of the issues with newer version of MapleStory in the short term, until they all get sorted out

--- a/HaCreator/GUI/HaRibbon.xaml
+++ b/HaCreator/GUI/HaRibbon.xaml
@@ -39,6 +39,8 @@
                 <CommandBinding Command="ns:HaRibbon.UserObjs"  CanExecute="AlwaysExecute" Executed="UserObjs_Executed" />
                 <CommandBinding Command="ns:HaRibbon.Export"  CanExecute="AlwaysExecute" Executed="Export_Executed" />
                 <CommandBinding Command="ns:HaRibbon.PhysicsEdit"  CanExecute="AlwaysExecute" Executed="PhysicsEdit_Executed" />
+
+                <CommandBinding Command="ns:HaRibbon.ShowMapProperties"  CanExecute="AlwaysExecute" Executed="ShowMapProperties_Executed" />
             </Ribbon.CommandBindings>
 
             <Ribbon.ApplicationMenu>
@@ -194,6 +196,13 @@
                                   SelectionChanged="comboBox_Resolution_SelectionChanged">
                         </ComboBox>
                     </StackPanel>
+                </RibbonGroup>
+            </RibbonTab>
+
+            <!-- Debug, only appear when run under DEBUG mode-->
+            <RibbonTab x:Name="debugTab" Header="DEBUG" KeyTip="D">
+                <RibbonGroup x:Name="RibbonGroup_DebugMap" Header="Map">
+                    <RibbonButton Label="Show unsupported 'info/' props" Command="ns:HaRibbon.ShowMapProperties" Focusable="False"/>
                 </RibbonGroup>
             </RibbonTab>
 
